Added code source link

--- a/assets/images/css copy/style.css
+++ b/assets/images/css copy/style.css
@@ -54,7 +54,7 @@ p {
     height: 480px;
     width: 100%;
     margin-bottom: 15px;
-    background-image: url("assets/images/digital-marketing-.jpg");
+    background-image: url(assets/images/digital-marketing-meeting.jpg);
     background-size: cover;
     background-position: center;
 }
